--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
         </main>
         <footer id="footer">
             <div id="footer-wrap">
-                <div class="copyright">&copy;2019 - 2021 BY Bucaicai</div>
+                <div class="copyright">&copy;2023 - 2024 BY Github</div>
             </div>
         </footer>
     </div>
